# agendamento-medico-api

./: .pre-commit-config.yaml  .sourcery.yaml  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: python-app.yml
src/exceptions/: BadRequestException.py  BaseException.py  ConflictException.py  NotFoundException.py
src/main/: _lifespan.py  app.py  settings.py
src/modules/base/: base_repository.py  context_repository.py  entity_table.py  repository.py
src/modules/doctor/entity/: doctor.py  doctor_schedule.py
src/modules/doctor/models/: models.py  models_schedule.py
src/modules/doctor/repository/: repository.py  repository_schedule.py
src/modules/doctor/router/: router.py  router_schedule.py
src/modules/doctor/service/: service.py  service_schedule.py
src/modules/paccient/entity/: paccient.py
src/modules/paccient/repository/: repository.py
src/modules/paccient/router/: router.py
src/modules/paccient/service/: service.py
src/modules/patient/entity/: patient.py
src/modules/patient/models/: models.py
src/modules/patient/repository/: repository.py
src/modules/patient/router/: router.py
src/modules/patient/service/: service.py
src/modules/schedule/entity/: schedule.py
src/modules/schedule/models/: models.py
src/modules/schedule/repository/: repository.py
src/modules/schedule/router/: router.py
src/modules/schedule/service/: service.py
src/modules/schedule/usecases/: get_day_schedule_doctor.py
src/modules/specialty/entity/: specialty.py
src/modules/specialty/models/: models.py
(+3 files in other folders)
